Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27017

Assertion failure 'table->get_ref_count() == 0' on DDL that involves FULLTEXT INDEX

    XMLWordPrintable

Details

    Description

      MDEV-25506 introduced a race condition that was inadequately fixed by MDEV-25936.
      Here is an example stack trace:

      10.6

      #2  0x000056397eb3ce0b in ut_dbg_assertion_failed (
          expr=0x56397ff9f440 "table->get_ref_count() == 0", 
          file=0x56397ff9f700 "/data/Server/bb-10.6-markoO/storage/innobase/dict/dict0dict.cc", line=1824)
          at /data/Server/bb-10.6-markoO/storage/innobase/ut/ut0dbg.cc:60
      #3  0x000056397ec887aa in dict_sys_t::remove (this=0x563980edd580 <dict_sys>, 
          table=0x618000274908, lru=false, keep=false)
          at /data/Server/bb-10.6-markoO/storage/innobase/dict/dict0dict.cc:1824
      #4  0x000056397ed045b3 in trx_t::commit (this=0x4f4764645068, 
          deleted=std::vector of length 9, capacity 16 = {...})
          at /data/Server/bb-10.6-markoO/storage/innobase/dict/drop.cc:249
      #5  0x000056397e66b546 in ha_innobase::delete_table (this=0x62b000217be0, 
          name=0x1aa33317c300 "./test/#sql-backup-68681-24")
          at /data/Server/bb-10.6-markoO/storage/innobase/handler/ha_innodb.cc:13626
      

      The assertion would fail on an internal table whose name starts with FTS_. The reason is that the call purge_sys.stop_FTS() does not actually wait that purge operations for all the FTS tables (related to the current operation) have ceased.

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3d 2.75h
                  3d 2.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.